<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignupActivity">

    <EditText
            android:id="@+id/emailET"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/passwordET"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            android:hint="@string/hint_password"
            android:inputType="textPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailET" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            style="@style/StandardButton"
            android:onClick="onSignup" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordET" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:text="@string/signup_button_text"/>

</android.support.constraint.ConstraintLayout>